--- a/Contact Me.html
+++ b/Contact Me.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Me</title>
+    <link rel="stylesheet" href=".\css\styles.css" />
   </head>
   <body>
     <h1>My Contact Details</h1>
-    <hr size="3" noshade />
+    <hr />
     <p>
       Available From : Monday - Saturday 9 a.m. to 6 p.m.
     </p>
@@ -16,7 +17,7 @@
     <p>
       Jrodriguez-castillo@xpanxion.com
     </p>
-    <hr size="3" noshade />
+    <hr />
     <form class="" action="mailto:Jrodriguez-castillo@xpanxion.com" method="post" enctype="text/plain">
       <label>Your Name:</label>
       <input type="text" name="yourName" value="">
@@ -28,6 +29,6 @@
       <textarea name="yourMessage" rows="8" cols="80"></textarea>
       <input type="submit" name="Submit">
     </form>
-    <hr size="3" noshade />
+    <hr />
   </body>
 </html>
