--- a/Education.html
+++ b/Education.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Education</title>
+    <link rel="stylesheet" href=".\css\styles.css" />
   </head>
   <body>
     <h1>Education</h1>
-    <hr size="3" noshade />
+    <hr  />
     <p>
       High School Diploma - June 2016
     </p>
-    <hr size="3" noshade />
+    <hr />
   </body>
 </html>
