--- a/Professional Skills.html
+++ b/Professional Skills.html
@@ -2,18 +2,19 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Professional Skills</title>
+    <title>Professional Background</title>
+    <link rel="stylesheet" href=".\css\styles.css" />
   </head>
   <body>
-    <h1>Professional Skills</h1>
-    <hr size="3" noshade />
-    <h4>Xpanxion | Remote<br />Java Full Stack Developer Apprentice</h4>
+    <h1>Professional Background</h1>
+    <hr />
+    <h4 id="xpanxion"name="xpanxion">Xpanxion | Remote<br />Java Full Stack Developer Apprentice</h4>
     <p>
       Trained in the understanding and proficiency of Java, Database and Front-End Frameworks. Delivery of scalable software systems to end user.
       Daily tasks consisted of design implementation, unit testing, code review and refactoring.
       Skilled and experienced with various technologies such as but not limited to Java 17, HTML 5, CSS 3, SQL Server, and Amazon Web Services.
     </p>
-    <h4>U.S. Marine Corps | Camp Pendleton, CA<br />Intelligence Specialist:</h4>
+    <h4 id="california"name="california">U.S. Marine Corps | Camp Pendleton, CA Jul 2016 - Sep 2021<br />Intelligence Specialist:</h4>
     <p>
       Responsible for the handling of classified documents and information within cleared spaces. Providing analysis of classified information via briefs or reports to commanders in order to aid decision making at the national level. This role requires
       thorough attention to detail, knowledge and critical thinking to be able to observe a problem set from multiple angles in order to determine the potential effects on U.S. interests. Tasks supported U.S. operations real time allowing decision
@@ -42,7 +43,7 @@
         Excellent presentation skills and public speaking
       </li>
     </ul>
-    <h4>U.S. Marine Corps | Defense Intelligence Agency | Pearl Harbor, HI | Jan 2021– Jul 2021<br />C5ISRT(Command, Control, Communications, Computers, Cyber, Intelligence, Surveillance, Reconnaissance, and Targeting) Analyst:</h4>
+    <h4 id="hawaii"name="hawaii">U.S. Marine Corps | Defense Intelligence Agency | Pearl Harbor, HI | Jan 2021 – Jul 2021<br />C5ISRT(Command, Control, Communications, Computers, Cyber, Intelligence, Surveillance, Reconnaissance, and Targeting) Analyst:</h4>
     <p>
       Responsible for providing indications and warning of ongoing changes in adversary C5ISRT infrastructure. This task required daily threat briefs on the full spectrum (Ground Jammers, Satellites, Radars, Launch Equipment etc.) of adversaries’
       C5ISRT infrastructure. Thorough knowledge of adversary C5ISRT capabilities and effects on U.S. interests. Maintained awareness of future developments of adversary capabilities and how they affect the battlespace. Provided thorough analysis of
@@ -65,7 +66,7 @@
       </li>
     </ul>
     </p>
-    <h4>U.S. Marine Corps | Kuwait | Oct 2019 – Jun 2020 <br /> All-Source Analyst | Shift Supervisor:
+    <h4 id="kuwait" name="kuwait">U.S. Marine Corps | Kuwait | Oct 2019 – Jun 2020 <br /> All-Source Analyst | Shift Supervisor:
     </h4>
     <p>
       Responsible for providing real time analysis to troops on the ground in the Central Command (CENTCOM) area of responsibility (Middle East). Held the supervisor position for the night crew, managing a team of 7 Marines. Provided quality control of
@@ -83,6 +84,6 @@
         Responsible for maintaining classified systems critical for mission success
       </li>
     </ul>
-    <hr size="3" noshade />
+    <hr />
   </body>
 </html>
