--- a/Experience and Skillset.html
+++ b/Experience and Skillset.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Experience and Skillset</title>
+    <link rel="stylesheet" href=".\css\styles.css" />
   </head>
   <body>
     <h1>Experience and Skillset</h1>
-    <hr size="3" noshade />
+    <hr  />
     <h3><a href="Experience and Skillset.html">EXPERIENCE AND SKILLSET</a></h3>
     <p>
     <ul>
@@ -65,6 +66,6 @@
       </table>
     </ul>
     </p>
-    <hr size="3" noshade />
+    <hr />
   </body>
 </html>
