--- a/Specialized Training.html
+++ b/Specialized Training.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Specialized Training / Advanced Skills</title>
+    <link rel="stylesheet" href=".\css\styles.css" />
   </head>
   <body>
     <h1>Specialized Training / Advanced Skills</h1>
-    <hr size="3" noshade />
+    <hr  />
     <p>
       Intelligence Specialist Course, Company Level Intelligence Course, Corporal’s Leadership Seminar, SERE Level C, Security Management, Class 3 UAS/UAV Operator (PUMA), PowerPoint, Excel, Microsoft
       Outlook, HTML 5, CSS, Java, MySQL, Amazon Web Services
     </p>
-    <hr size="3" noshade />
+    <hr />
   </body>
 </html>
