--- a/index.html
+++ b/index.html
@@ -4,37 +4,43 @@
 <head>
   <meta charset="utf-8">
   <title>Jon's Personal Site</title>
+  <link rel="stylesheet" href=".\css\styles.css" />
+  <link rel="icon" href="favicon.ico?v=2">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Merriweather&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <table>
+
+  <table background-color:black;>
     <tr>
-      <td>
-        <img src=".\images\Myself.png" width="300" height="400" />
+      <td height=100%>
+        <img src=".\images\Myself2.jpg" height=500px width=400px alt="portrait" />
       </td>
-      <td>
-        <h7>
-          Professional Image is a work in progress.
-        </h7>
+
+      <td style="padding-left: 40px;">
+
+
         <h1>Jon Rodriguez</h1>
         <p>
-          <em>Software Engineer Apprentice at <strong><a href="https://www.xpanxion.com/">Xpanxion</a></strong></em>
-          <br />
+          <em>Software Engineer Apprentice at <strong><a href=" https://www.xpanxion.com/">Xpanxion</a></strong></em>
         </p>
+
+        <p>
+          Self-driven veteran professional, and recent student of a 340-hour hands-on, Full-Stack Java Developer immersive learning program. Currently hold a <strong>TS/SCI clearance</strong>. Military Experience include 5 years 6 months of
+          intelligence
+          support to Ground and Cyberspace Operations. Proven ability to communicate and collaborate with multiple levels of senior management across diverse cultural audiences. Worked long hours in mostly stressful environments to meet the DoD’s
+          mission
+          goals and objectives. Passionate about tech and Information Technology. Able to work in a team-oriented position, in an office environment or remotely.
+        </p>
+
       </td>
     </tr>
   </table>
+  <hr />
 
-  <br />
-
-  <p>
-    Self-driven veteran professional, and recent student of a 340-hour hands-on, Full-Stack Java Developer immersive learning program. Currently hold a <strong>TS/SCI clearance</strong>. Military Experience include 5 years 6 months of intelligence
-    support to Ground and Cyberspace Operations. Proven ability to communicate and collaborate with multiple levels of senior management across diverse cultural audiences. Worked long hours in mostly stressful environments to meet the DoD’s mission
-    goals and objectives. Passionate about tech and Information Technology. Able to work in a team-oriented position, in an office environment or remotely.
-  </p>
-  <hr size="3" noshade />
   <h3><a href="Experience and Skillset.html">EXPERIENCE AND SKILLSET</a></h3>
-  <p>
   <ul>
     <table>
       <tr>
@@ -90,16 +96,15 @@
       </tr>
     </table>
   </ul>
-  </p>
-  <hr size="3" noshade />
-  <h3><a href="Professional Skills.html">PROFESSIONAL SKILLS</a></h3>
+  <hr />
+  <h3><a href="Professional Skills.html">PROFESSIONAL BACKGROUND</a></h3>
   <table>
     <tr>
       <td>
         <h4>Jan 2021 - Present</h4>
       </td>
       <td>
-        <h4><a href="Professional Skills.html">Xpanxion | Remote | Java Full Stack Developer Apprentice</a></h4>
+        <h4><a href="Professional Skills.html#xpanxion">Xpanxion | Remote | Java Full Stack Developer Apprentice</a></h4>
       </td>
     </tr>
     <tr>
@@ -107,14 +112,15 @@
         <h4>Jul 2016 - Sep 2021</h4>
       </td>
       <td>
-        <h4><a href="Professional Skills.html">U.S. Marine Corps | Intelligence Analyst</a></h4>
+        <h4><a href="Professional Skills.html#california">U.S. Marine Corps | Intelligence Analyst</a></h4>
       </td>
     <tr>
       <td>
         <h4>Jan 2021</h4>
       </td>
       <td>
-        <h4><a href="Professional Skills.html">U.S. Marine Corps | Defense Intelligence Agency | Pearl Harbor, HI | C5ISRT(Command, Control, Communications, Computers, Cyber, Intelligence, Surveillance, Reconnaissance, and Targeting) Analyst</a></h4>
+        <h4><a href="Professional Skills.html#hawaii">U.S. Marine Corps | Defense Intelligence Agency | Pearl Harbor, HI | C5ISRT(Command, Control, Communications, Computers, Cyber, Intelligence, Surveillance, Reconnaissance, and Targeting)
+            Analyst</a></h4>
       </td>
     </tr>
     <tr>
@@ -122,24 +128,26 @@
         <h4>Oct 2019</h4>
       </td>
       <td>
-        <h4><a href="Professional Skills.html">U.S. Marine Corps | Kuwait All-Source Analyst | Shift Supervisor
+        <h4><a href="Professional Skills.html#kuwait">U.S. Marine Corps | Kuwait All-Source Analyst | Shift Supervisor
           </a></h4>
       </td>
     </tr>
   </table>
-  <hr size="3" noshade />
+  <br />
+  <hr />
   <h3><a href="Specialized Training.html">SPECIALIZED TRAINING / ADVANCED SKILLS</a></h3>
   <p>
     Intelligence Specialist Course, Company Level Intelligence Course, Corporal’s Leadership Seminar, SERE Level C, Security Management, Class 3 UAS/UAV Operator (PUMA), PowerPoint, Excel, Microsoft
     Outlook, HTML 5, CSS, Java, MySQL, Amazon Web Services
   </p>
-  <hr size="3" noshade />
+  <hr />
   <h3><a href="Education.html">EDUCATION</a></h3>
   <p>
     High School Diploma - June 2016
   </p>
-  <hr size="3" noshade />
+  <hr />
   <h5><a href="Contact Me.html">Contact Me</a></h5>
+
 </body>
 
 </html>
