--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 </head>
 
 <body>
-
+<div class="top-container">
   <table background-color:black;>
     <tr>
-      <td height=100%>
-        <img src=".\images\Myself2.jpg" height=500px width=400px alt="portrait" />
+      <td>
+        <img class="portrait" src="images\Myself2.jpg" alt="portrait"
+        style="margin-top:10px; margin-left: 10px" height=500px;
+        width=400px;/>
       </td>
 
       <td style="padding-left: 40px;">
@@ -39,115 +41,68 @@
     </tr>
   </table>
   <hr />
+</div>
 
-  <h3><a href="Experience and Skillset.html">EXPERIENCE AND SKILLSET</a></h3>
-  <ul>
-    <table>
-      <tr>
-        <td>
-          <li>
-            <a href="https://github.com/ShaneCupid/CodeDevils">Java</a>
-          </li>
-        </td>
-        <td>
-          <li>
-            HTML/CSS
-          </li>
-        </td>
-        <td>
-          <li>
-            <a href="https://github.com/JonRodriguez98/Udemy/tree/main/Udemy%20Course">MySQL Database</a>
-          </li>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <li>
-            <a hred="https://github.com/ShaneCupid/CodeDevils/issues?q=is%3Aissue+is%3Aclosed">Quality Assurance</a>
-          </li>
-        </td>
-        <td>
-          <li>
-            Version Control Systems (<a href="https://github.com/JonRodriguez98">GitHub</a>)
-          </li>
-        </td>
-        <td>
-          <li>
-            Cloud Hosting
-          </li>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <li>
-            Data Security
-          </li>
-        </td>
-        <td>
-          <li>
-            Presentation Skills
-          </li>
-        </td>
-        <td>
-          <li>
-            Fast Learner
-          </li>
-        </td>
-      </tr>
-    </table>
-  </ul>
+
+<div class="middle-container">
+  <h3 class="center-text" ><a href="Experience and Skillset.html">EXPERIENCE AND SKILLSET</a></h3>
+  <img src="https://i.pinimg.com/originals/ef/82/7d/ef827d98fdda66a6282d2901f09532e3.gif" alt="web development" width=500px height=350px class="center" />
+<p>
+  Current skillset includes
+  <a href="https://github.com/ShaneCupid/CodeDevils">Java</a>,
+  HTML/CSS,
+  <a href="https://github.com/JonRodriguez98/Udemy/tree/main/Udemy%20Course">MySQL Database</a>,
+  <a hred="https://github.com/ShaneCupid/CodeDevils/issues?q=is%3Aissue+is%3Aclosed">Quality Assurance</a>,
+  Version Control Systems (<a href="https://github.com/JonRodriguez98">GitHub</a>),
+  Cloud Hosting,
+  Data Security,
+  Presentation Skills, and being a
+  Fast Learner
+</p>
+
+
   <hr />
-  <h3><a href="Professional Skills.html">PROFESSIONAL BACKGROUND</a></h3>
-  <table>
-    <tr>
-      <td>
+  <h3 class="center-text"><a href="Professional Skills.html">PROFESSIONAL BACKGROUND</a></h3>
+<img src="https://i.gifer.com/origin/23/233d0ae0bb78c79932c61fc7609b1535.gif" alt="Software Development" class="center" height=350px width=600px />
+
         <h4>Jan 2021 - Present</h4>
-      </td>
-      <td>
+
         <h4><a href="Professional Skills.html#xpanxion">Xpanxion | Remote | Java Full Stack Developer Apprentice</a></h4>
-      </td>
-    </tr>
-    <tr>
-      <td>
+  <img src="https://www.insiderintelligence.com/static/644b2bf981e62ef6120edd097fd938f1/product-hero.gif" alt="Analysis" class="center" height=350px width=500px />
         <h4>Jul 2016 - Sep 2021</h4>
-      </td>
-      <td>
+
         <h4><a href="Professional Skills.html#california">U.S. Marine Corps | Intelligence Analyst</a></h4>
-      </td>
-    <tr>
-      <td>
+
         <h4>Jan 2021</h4>
-      </td>
-      <td>
+
         <h4><a href="Professional Skills.html#hawaii">U.S. Marine Corps | Defense Intelligence Agency | Pearl Harbor, HI | C5ISRT(Command, Control, Communications, Computers, Cyber, Intelligence, Surveillance, Reconnaissance, and Targeting)
             Analyst</a></h4>
-      </td>
-    </tr>
-    <tr>
-      <td>
+
         <h4>Oct 2019</h4>
-      </td>
-      <td>
+
         <h4><a href="Professional Skills.html#kuwait">U.S. Marine Corps | Kuwait All-Source Analyst | Shift Supervisor
           </a></h4>
-      </td>
-    </tr>
-  </table>
+
   <br />
   <hr />
-  <h3><a href="Specialized Training.html">SPECIALIZED TRAINING / ADVANCED SKILLS</a></h3>
-  <p>
+  <h3 class="center-text"><a href="Specialized Training.html">SPECIALIZED TRAINING / ADVANCED SKILLS</a></h3>
+  <p class="center-text">
     Intelligence Specialist Course, Company Level Intelligence Course, Corporal’s Leadership Seminar, SERE Level C, Security Management, Class 3 UAS/UAV Operator (PUMA), PowerPoint, Excel, Microsoft
     Outlook, HTML 5, CSS, Java, MySQL, Amazon Web Services
   </p>
   <hr />
-  <h3><a href="Education.html">EDUCATION</a></h3>
-  <p>
+  <h3 class="center-text"><a href="Education.html">EDUCATION</a></h3>
+  <p class="center-text">
     High School Diploma - June 2016
   </p>
   <hr />
-  <h5><a href="Contact Me.html">Contact Me</a></h5>
+</div>
+  <div class="bottom-container">
 
+    <a href="Contact Me.html">Contact Me</a> or follow me on
+    <a class="footer-link" href="https://www.linkedin.com/JonRodriguez98">LinkedIn</a>
+    <p>© Jon Rodriguez.</p>
+  </div>
 </body>
 
 </html>
