--- a/Contact Me.html
+++ b/Contact Me.html
@@ -4,18 +4,22 @@
     <meta charset="utf-8">
     <title>Contact Me</title>
     <link rel="stylesheet" href=".\css\styles.css" />
+    <link rel="icon" href="favicon.ico?v=2">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Merriweather&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>My Contact Details</h1>
     <hr />
     <p>
       Available From : Monday - Saturday 9 a.m. to 6 p.m.
-    </p>
+    </p><br />
     <p>
-      (610) 816-1318
-    </p>
+      Mobile: (610) 816-1318
+    </p><br />
     <p>
-      Jrodriguez-castillo@xpanxion.com
+      Email: Jrodriguez-castillo@xpanxion.com
     </p>
     <hr />
     <form class="" action="mailto:Jrodriguez-castillo@xpanxion.com" method="post" enctype="text/plain">
