--- a/Experience and Skillset.html
+++ b/Experience and Skillset.html
@@ -4,12 +4,15 @@
     <meta charset="utf-8">
     <title>Experience and Skillset</title>
     <link rel="stylesheet" href=".\css\styles.css" />
+    <link rel="icon" href="favicon.ico?v=2">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Merriweather&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>Experience and Skillset</h1>
     <hr  />
     <h3><a href="Experience and Skillset.html">EXPERIENCE AND SKILLSET</a></h3>
-    <p>
     <ul>
       <table>
         <tr>
@@ -65,7 +68,6 @@
         </tr>
       </table>
     </ul>
-    </p>
     <hr />
   </body>
 </html>
