--- a/Specialized Training.html
+++ b/Specialized Training.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <title>Specialized Training / Advanced Skills</title>
     <link rel="stylesheet" href=".\css\styles.css" />
+    <link rel="icon" href="favicon.ico?v=2">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Merriweather&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>Specialized Training / Advanced Skills</h1>
