Fixed a few formatting inconsistencies.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <img src="https://www.insiderintelligence.com/static/644b2bf981e62ef6120edd097fd938f1/product-hero.gif" alt="Analysis" class="center" height=350px width=500px />
         <h4>Jul 2016 - Sep 2021</h4>
 
-        <h4><a href="Professional Skills.html#california">U.S. Marine Corps | Intelligence Analyst</a></h4>
+        <h4><a href="Professional Skills.html#california">U.S. Marine Corps | Camp Pendleton, CA | Intelligence Analyst</a></h4>
 
         <h4>Jan 2021</h4>
 
@@ -80,7 +80,7 @@
 
         <h4>Oct 2019</h4>
 
-        <h4><a href="Professional Skills.html#kuwait">U.S. Marine Corps | Kuwait All-Source Analyst | Shift Supervisor
+        <h4><a href="Professional Skills.html#kuwait">U.S. Marine Corps | Kuwait | All-Source Analyst | Shift Supervisor
           </a></h4>
 
   <br />
