--- a/Experience and Skillset.html
+++ b/Experience and Skillset.html
@@ -12,7 +12,7 @@
   <body>
     <h1>Experience and Skillset</h1>
     <hr  />
-    <h3><a href="Experience and Skillset.html">EXPERIENCE AND SKILLSET</a></h3>
+    <h3>EXPERIENCE AND SKILLSET</h3>
     <ul>
       <table>
         <tr>
